--- a/css/styles.css
+++ b/css/styles.css
@@ -33,23 +33,47 @@ h1{
 }
 h3{
     font-size: 0.9em;
-    text-align: center;
+    text-align: start;
     margin: 0;
     margin-top: 20px;
+    width: 80%;
 }
 p{
     font-size: 0.5em;
     text-align: start;
-    width: 90%;
+    width: 80%;
 }
 form{
-    background-color: aqua;
+    width: 85%;
+    margin: 0;
+    padding: 0;
     height: 55%;
     display: flex;
     flex-direction: column;
+    align-items: center;
     justify-content: space-evenly;
-    border-top: 2px solid rgba(0, 0, 0, 0.177);
+    border-top: 2px solid rgba(0, 0, 0, 0.089);
+}
+label{
+    font-size: 0.6em;
+}
+.input{
+    width: 100%;
 }
 input{
     width: 98%;
+}
+.boton{
+    width: 100%;
+    margin-top: 18px;
+}
+button{
+    width: 100%;
+    background-color: blue;
+    color: white;
+    border-radius: 5px;
+    padding: 5px;
+}
+button:hover{
+    background-color: rgb(121, 150, 255);
 }
